Revert "KRT: Added new page opening link to links"
This reverts commit 594427da6bf7a804fc96062cd64d7c1283201180.

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -10,7 +10,7 @@
     style="width: 100px;margin: 5px"
   />
   <br />
-  <a href="{{ include.p[1].url }}" target="_blank">{{ include.p[1].name }}</a>
+  <a href="{{ include.p[1].url }}">{{ include.p[1].name }}</a>
   <br />
   {{ include.p[1].affiliation }}
 </div>
