--- a/_includes/speakerinfo.html
+++ b/_includes/speakerinfo.html
@@ -1,24 +1,31 @@
-<div
-  class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center"
-  id="{{ include.p[0] }}"
-  style="height: 300px"
->
-  <img
-    src="{{ site.baseurl }}/img/{{ include.p[1].img }}"
-    alt="{{ include.p[1].name }}"
-    class="img-circle"
-    style="width: 200px;margin: 15px"
-  />
-  <br />
-  <a href="{{ include.p[1].url }}">{{ include.p[1].name }}</a>
-  <br />
-  {{ include.p[1].affiliation }}
-  <br />
-  <b>{{ include.p[1].title }}</b>
-  <br />
-  {{ include.p[1].abstract }}
-  <br />
-  <i>{{ include.p[1].bio }}</i>
 
-
+<div class="container">
+  <div class="row">
+    <table class="table">
+  <tr>
+    <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center"
+      id="{{ include.p[0] }}"
+      style="height: 300px">
+        <img
+          src="{{ site.baseurl }}/img/{{ include.p[1].img }}"
+          alt="{{ include.p[1].name }}"
+          class="img-circle"
+          style="width: 200px;margin: 15px"
+        />
+        <br />
+        <a href="{{ include.p[1].url }}">{{ include.p[1].name }}</a>
+        <br />
+        {{ include.p[1].affiliation }}
+        <br />
+        <b>{{ include.p[1].title }}</b>
+        <br />
+        {{ include.p[1].abstract }}
+        <br />
+        <i>{{ include.p[1].bio }}</i>
+      </div>
+    </tr>
+  </table>
 </div>
+</div>
+
+
