KRT: Modifying speaker page layout

--- a/_includes/speakerinfo.html
+++ b/_includes/speakerinfo.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center"
+<!-- <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center"
   id="{{ include.p[0] }}"
   style="height: 300px">
   <td>
@@ -20,8 +20,20 @@
   <td>
     <i>{{ include.p[1].bio }}</i>
   </td>
-</div>
+</div> -->
 
+<h2><a href="{{ include.p[1].url }}">{{ include.p[1].name }}</a></h2>
+
+<img
+      src="{{ site.baseurl }}/img/{{ include.p[1].img }}"
+      alt="{{ include.p[1].name }}"
+      class="img-circle"
+      style="width: 200px;margin: 15px"
+    />
+
+<b>Title</b>: {{ include.p[1].title }}<br />
+<b>Abstract</b>: {{ include.p[1].abstract }} <br />
+<b>Bio</b>: {{ include.p[1].bio }}
 
 
 
