--- a/_includes/speakerinfo.html
+++ b/_includes/speakerinfo.html
@@ -26,12 +26,13 @@
       src="{{ site.baseurl }}/img/{{ include.p[1].img }}"
       alt="{{ include.p[1].name }}"
       class="img-circle"
-      style="width: 50px;margin: -15px"
+      style="width: 50px;margin: 5px"
     /> <a href="{{ include.p[1].url }}" target="_blank">{{ include.p[1].name }}</a></h2> 
 
 <b>Title</b>: <i>{{ include.p[1].title }}</i><br /><br />
-<b>Abstract</b>: {{ include.p[1].abstract }} <br /><br />
-<b>Bio</b>: <i>{{ include.p[1].bio }}</i>
+<b>Abstract</b>: {{ include.p[1].abstract }}<br /><br />
+<b>Bio</b>: <i>{{ include.p[1].bio }}</i><br /><br />
+<b>Time</b>: {{ include.p[1].time }}
 
 
 
