--- a/_includes/speakerinfo.html
+++ b/_includes/speakerinfo.html
@@ -1,27 +1,3 @@
-<!-- <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center"
-  id="{{ include.p[0] }}"
-  style="height: 300px">
-  <td>
-    <img
-      src="{{ site.baseurl }}/img/{{ include.p[1].img }}"
-      alt="{{ include.p[1].name }}"
-      class="img-circle"
-      style="width: 200px;margin: 15px"
-    />
-  <a href="{{ include.p[1].url }}">{{ include.p[1].name }}</a>
-  <br />
-    {{ include.p[1].affiliation }}
-  </td>
-  <td>
-    <b>{{ include.p[1].title }}</b>
-    <br />
-    {{ include.p[1].abstract }}
-  </td>
-  <td>
-    <i>{{ include.p[1].bio }}</i>
-  </td>
-</div> -->
-
 <h2><img
       src="{{ site.baseurl }}/img/{{ include.p[1].img }}"
       alt="{{ include.p[1].name }}"
@@ -29,10 +5,11 @@
       style="width: 50px;margin: 5px"
     /> <a href="{{ include.p[1].url }}" target="_blank">{{ include.p[1].name }}</a></h2> 
 
+<b>Time</b>: {{ include.p[1].time }}<br /><br />
 <b>Title</b>: <i>{{ include.p[1].title }}</i><br /><br />
 <b>Abstract</b>: {{ include.p[1].abstract }}<br /><br />
-<b>Bio</b>: <i>{{ include.p[1].bio }}</i><br /><br />
-<b>Time</b>: {{ include.p[1].time }}
+<b>Bio</b>: <i>{{ include.p[1].bio }}</i>
+
 
 
 
