KRT: Added anchors to speaker info and spotlights

--- a/_includes/speakerinfo.html
+++ b/_includes/speakerinfo.html
@@ -1,4 +1,4 @@
-<a href="#{{ include.p[1].shortname }}"></a><h2><img
+<a name="#{{ include.p[1].shortname }}"></a><h2><img
       src="{{ site.baseurl }}/img/{{ include.p[1].img }}"
       alt="{{ include.p[1].name }}"
       class="img-circle"
