KRT: Fixed anchors to speaker info and spotlights

--- a/_includes/speakeranchor.html
+++ b/_includes/speakeranchor.html
@@ -10,7 +10,7 @@
     style="width: 200px;margin: 15px"
   />
   <br />
-  <a href="#{{ include.p[1].shortname }}">{{ include.p[1].name }}</a>
+  <a href="https://rcqa-ws.github.io/speakers#{{ include.p[1].shortname }}">{{ include.p[1].name }}</a>
   <br />
   {{ include.p[1].affiliation }}
 </div>
