KRT: Added slides to speaker page

--- a/_includes/speakerinfo.html
+++ b/_includes/speakerinfo.html
@@ -5,8 +5,9 @@
       style="width: 50px;margin: 5px"
     /> <a href="{{ include.p[1].url }}" target="_blank">{{ include.p[1].name }}</a></h2> 
 
-<b>Time</b>: {{ include.p[1].time }}<br /><br />
-<b>Title</b>: <i>{{ include.p[1].title }}</i><br /><br />
+<!-- <b>Time</b>: {{ include.p[1].time }}<br /><br /> -->
+<!-- <b>Slides</b>: {{ include.p[1].time }}<br /><br /> -->
+<b>Title</b>: <i>{{ include.p[1].title }}, <a href="{{ include.p[1].slides }}" target="_blank">slides</a></i><br /><br />
 <b>Abstract</b>: {{ include.p[1].abstract }}<br /><br />
 <b>Bio</b>: <i>{{ include.p[1].bio }}</i>
 
